<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="buttonSendMessage" type="id" />
    <item name="editTextMessage" type="id" />
    <item name="layoutMessageInput" type="id" />
    <item name="recyclerViewChat" type="id" />
    <item name="recyclerViewGrocery" type="id" />
</resources>